feat: Swagger JWT 설정 #21